--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #dbeeee;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
@@ -42,7 +42,7 @@ $background: #fff;
 $background-alt: #f2f2f5;
 
 // Define border colors
-$border: #dcd9d9;
+$border: #afdbdf;
 
 // Define text colors
 $heading: #374054;
