--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,7 +38,7 @@ $base-color: #dbeeee;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background: #fff;
+$background: #dbeeee;
 $background-alt: #f2f2f5;
 
 // Define border colors
