--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,10 +39,10 @@ $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
 $background: #dbeeee;
-$background-alt: #f2f2f5;
+$background-alt: #dbeeee;
 
 // Define border colors
-$border: #afdbdf;
+$border: #dbeeee;
 
 // Define text colors
 $heading: #374054;
