--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -719,6 +719,7 @@ footer {
         list-style: none;
         cursor: default;
         font-size: 1.2em;
+        border-radius: 10px;
     }
 }
 
