--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -321,6 +321,7 @@ footer {
     font-size: 2em;
     font-weight: 300;
     margin: 0 0 30px 0;
+    border-radius: 20px;
 
     &:after {
         position: absolute;
