--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -740,6 +740,14 @@ footer {
         color: #fff;
         font-weight: 500;
     }
+
+    p{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;  
+    }
+
 }
 
 #contact-form {
