--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,18 +34,18 @@
 */
 
 // Define base and accent colors
-$base-color: #b3cde0;
+$base-color: #005b96;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background: #005b96;
+$background: #b3cde0;
 $background-alt: #03396c;
 
 // Define border colors
-$border: #011f4b;
+$border: #6497b1;
 
 // Define text colors
-$heading: #6497b1;
+$heading: #011f4b;
 $text: #b3cde0;
 
 /*
