--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,14 +39,15 @@ $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
 $background: #b3cde0;
-$background-alt: #03396c;
+$background-alt: #6497b1;
+
 
 // Define border colors
-$border: #6497b1;
+$border: #03396c;
 
 // Define text colors
-$heading: #011f4b;
-$text: #b3cde0;
+$heading: #6497b1;
+$text: #011f4b;
 
 /*
     ---------------------
