--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,20 +34,20 @@
 */
 
 // Define base and accent colors
-$base-color: #005b96;
+$base-color: #083c6d;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background: #b3cde0;
-$background-alt: #b3cde0;
+$background: #bdd9ec;
+$background-alt: #bdd9ec;
 
 
 // Define border colors
-$border: #011f4b;
+$border: #001d49;
 
 // Define text colors
-$heading: #03396c;
-$text: #011f4b;
+$heading: #083c6d;
+$text: #001d49;
 
 /*
     ---------------------
